--- a/main.css
+++ b/main.css
@@ -6,6 +6,11 @@ body {
 /*--- navigation bar ---*/
 .navbar {
   background:#6ab446;
+  overflow: visible;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1;
 }
 .nav-link,
 .navbar-brand {
@@ -26,9 +31,11 @@ body {
   background-size: cover;
   background-position: center;
   position: relative;
+  
 }
 .overlay {
   position: absolute;
+  overflow: hidden;
   min-height: 100%;
   min-width: 100%;
   left: 0;
@@ -116,9 +123,9 @@ a{
 /* The Modal (background) */
 .modal {
   display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
+  position: relative; /* Stay in place */
   z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
+  padding-top: 350px; /* Location of the box */
   left: 0;
   top: 0;
   width: 900px; /* Full width */
@@ -126,6 +133,9 @@ a{
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+.modal p{
+	color:black;
 }
 
 /* Modal Content */
@@ -157,9 +167,20 @@ a{
 /* The Close Button */
 .close {
   color: white;
-  float: right;
+  left: 0px;
   font-size: 28px;
   font-weight: bold;
+}
+.modal-header .close {
+    padding: 1rem;
+    margin: 0;
+}
+.modal-header h2{
+	position: absolute;
+	left: 60px;
+	margin: 0;
+	padding: 1rem;	
+	height: 60px;
 }
 
 .close:hover,
@@ -173,12 +194,21 @@ a{
   padding: 2px 16px;
   background-color: #5cb85c;
   color: white;
+  float: left;
 }
 
-.modal-body {padding: 2px 16px;}
-
+.modal-body {
+	padding: 2px 16px;
+}
 .modal-footer {
   padding: 2px 16px;
+  height: 60px;
   background-color: #5cb85c;
   color: white;
+}
+#maps{
+	width: 100%;
+	height:80%;
+	border-style: solid;
+	border-color: #6ab446;
 }
